<resources>
    <string name="app_name">Rise</string>
    <string name="logo_rise">Logo Rise</string>
    <string name="loginEmail">Login with Email</string>
    <string name="loginGoogle">Login with Google</string>
    <string name="loginAnonymous">Login Anonymous</string>

    <!-- Navigation Drawer -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_anonymous">Welcome Anonymous</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="logout">Logout</string>
    <string name="funzioni">FUNZIONI!?</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_header">Navigation header</string>
    <string name="std_nav_name_surname">Name Surname</string>
    <string name="std_nav_email">rise@project.com</string>
    <string name="test">Test</string>
    <string name="etf">Cosa sono gli ETF</string>
    <string name="etf_subtitle">Rise presenta la guida all’inflazione, esplorando e chiarendo...</string>
    <string name="guarda_tutte_le_guide">Guarda tutte le guide</string>
    <string name="corsi">Corsi</string>
    <string name="titolo">Titolo</string>
    <string name="sottotitolo">Sottotitolo</string>
    <string name="this_is_a_description">This is a description</string>
    <string name="course_image">Course image</string>
    <string name="profile">Profile</string>
</resources>