<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/baseline_quiz_24"
            android:title="@string/quiz" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/baseline_quiz_24"
            android:title="@string/test" />
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>