<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:background="#FFFFFFFF"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/rw3jaiyp57ph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/r44ik2zsy3ta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_shape4"
                android:paddingTop="19dp"
                android:paddingBottom="106dp"
                android:layout_marginBottom="1408dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/welcome_anonymous"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/rnhk5xhi129"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="46dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/corsi"/>

                <!-- Course 1 -->
                <LinearLayout
                    android:id="@+id/course1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_shape1"
                    android:paddingBottom="22dp"
                    android:layout_marginBottom="19dp"
                    android:layout_marginHorizontal="44dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="184dp"
                        android:background="@drawable/home_shape2"
                        android:layout_marginBottom="16dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">
                    </LinearLayout>
                    <TextView
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginStart="26dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/etf"/>
                    <TextView
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="26dp"
                        android:layout_height="0dp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/etf_subtitle"/>
                </LinearLayout>

                <!-- Course 2 -->
                <LinearLayout
                    android:id="@+id/course2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_shape1"
                    android:paddingBottom="22dp"
                    android:layout_marginBottom="19dp"
                    android:layout_marginHorizontal="44dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="184dp"
                        android:background="@drawable/home_shape2"
                        android:layout_marginBottom="16dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">
                    </LinearLayout>
                    <TextView
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginStart="26dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/etf"/>
                    <TextView
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="26dp"
                        android:layout_height="0dp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/etf_subtitle"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>